--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', item: @item %>
 
-<%= link_to 'Показать', @item %> |
-<%= link_to 'Назад', items_path %>
+<%= link_to 'Показать', @item, class: 'btn right'%> |
+<%= link_to 'Назад', items_path, class: 'btn right'%>
