--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Новая задача</h1>
 
-<%= render 'form', item: @item %>
+<%= render 'form', item: @item%>
 
-<%= link_to 'Назад', items_path %>
+<%= link_to 'Назад', items_path, class: 'btn right' %>
